# lite-json

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
derive/: Cargo.toml
derive/src/: from_json.rs  into_json.rs  lib.rs  trait_bounds.rs  utils.rs
parser/: Cargo.toml
parser/src/: impls.rs  lib.rs  parser.rs  traits.rs
src/: impls.rs  json.rs  json_parser.rs  lib.rs  parse.rs  parser.rs  traits.rs
