[package]
name = "lite-json"
version = "0.1.3"
authors = ["Bryan Chen <xlchen1291@gmail.com>"]
description = "Simple JSON parser. Wasm / no_std ready."
license = "Apache-2.0"
edition = "2018"
keywords = [ "json", "parser", "simple", "wasm", "no_std" ]
repository = "https://github.com/xlc/lite-json"
categories = [
    "no-std",
]

[dependencies]
lite-parser = { version = "0.1.2", path = "parser", default-features = false }
num-traits = { version = "0.2", optional = true, default-features = false }

[features]
default = ["std"]
std = [
    "lite-parser/std"
]
# Enables converting values to floats in no-`std` environment
float = ["num-traits"]

[workspace]
members = [
    "parser"
]
