[package]
name = "lite-json"
version = "0.2.0"
authors = ["Bryan Chen <xlchen1291@gmail.com>"]
description = "Simple JSON parser. Wasm / no_std ready."
license = "Apache-2.0"
edition = "2018"
keywords = [ "json", "parser", "simple", "wasm", "no_std" ]
repository = "https://github.com/xlc/lite-json"
categories = [
    "no-std",
]

[dependencies]
lite-parser = { version = "0.2.0", path = "parser", default-features = false }
num-traits = { version = "0.2", optional = true, default-features = false }
lite-json-derive = { path = "derive", default-features = false, optional = true }

[dev-dependencies]
assert_float_eq = "1.1.3"

[features]
default = ["std"]
std = [
    "lite-parser/std"
]
float = ["num-traits"] # Enables converting values to floats in no-`std` environment
derive = ["lite-json-derive"]

[workspace]
members = [
    "parser",
    "derive"
]
